[package]
name = "cloudformation_generator"
version = "0.1.0"
authors = ["Evan Helbig <evan.helbig@willowtreeapps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
cloudformation = { path = "cloudformation" }
clap = "2.33.1"